Report generator Improvement. Filter can now ignore false fields.